ressources/traefik-ingress/traefik-ingress-admin.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefix
  creationTimestamp: null
  name: traefik-ingress-admin
  namespace: kube-system
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: traefik-ingress-service
          servicePort: 8080
    host: traefik.k8sworkshop.exxoss.academy
status:
  loadBalancer: {}
